src/components/Modal/style.css
.MuiDialogContent-root::-webkit-scrollbar {
    width: 10px;
}

.MuiDialogContent-root::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px #f7e9cd; 
    border-radius: 10px;
}
   
  /* Handle */
.MuiDialogContent-root::-webkit-scrollbar-thumb {
    background: #b09155; 
    border-radius: 10px;
}
  
  /* Handle on hover */
.MuiDialogContent-root::-webkit-scrollbar-thumb:hover {
    background: #a5a097;
    transition: 0.5s;
}

.MuiDialogContent-root {
    overflow-x: hidden !important;
    border: 1px #b09155 solid;
    background-color: #0a0a0c;
    scrollbar-color: #b09155;
    scrollbar-width: thin;
}

.MuiDialog-paperWidthSm {
    max-width: 900px !important;
}

.ModalChampion {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.ModalChampionInfo {
    text-align: center;
    display: block;
    align-items: center;
    justify-content: center;
    width: 70%;
}

.ModalChampionTitle, .ModalChampionAbilitiesTitle{
    display: flex;
    align-items: center;
    justify-content: center;
    max-height: 40px;
}

.ModalChampionTitleDetail {
    text-transform: uppercase;
    font-style: italic;
    font-size: 5em;
    text-align: center;
    color: #b09155;
}

.ModalChampionNickname {
    text-align: center;
    color: #fff;
    position: relative;
    font-size: 14px;
}

.ModalChampionInfoContent {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-top: 30px;
}

.ModalChampionDifficulty {
    display: flex;
    justify-content: flex-start;
}

.ModalChampionRole {
    display: flex;
    justify-content: flex-end;
}

.ModalChampionInfoDetail {
    color: #b09155;
    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
    font-weight: 100;
}

.ModalChampionDifficultyDetail, .ModalChampionRoleDetail {
    color: #fff;
    position: relative;
    bottom: 15px;
    font-size: 14px;
}

.ModalChampionBiography {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.ModalChampionBiographyDetail {
    text-align: justify;
    color: #fff;
}

.ModalChampionAbilitiesTitleDetail {
    color: #b09155;
    font-size: 3em;
    text-align: center;
    font-style: italic;
}

.ModalChampionAbilities {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #0d0d0e;

    width: 100%;
    min-height: 150px;
    margin-top: 1.0rem;
}

.ModalChampionAbilitiesContainer {
    width: 90%;
}

.ModalChampionAbilitiesContent {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
}

.ModalChampionAbilitiesImage {
    width: 12%;
    height: 64px;
}

.ModalChampionAbilitiesName {
    display: flex;
    color: #b09155;
    font-size: 1.5rem;
    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
    font-weight: 100;
    position: relative;
    margin: 5px 0;
}

.ModalChampionAbilitiesDescription {
    display: flex;
    width: 80%;
}

.ModalChampionAbilitiesDescriptionDetail {
    color: #fff;
    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
    font-size: 0.8em;
    text-align: justify;
}

@media only screen and (min-width: 320px) and (max-width: 1000px) {
    .ModalChampionTitleDetail {
        font-size: 3em;
    }
}

@media only screen and (max-width: 320px) {
    .ModalChampionTitleDetail {
        font-size: 2em;
    }
}

